# GeometricTools

./: CMakeLists.txt
GTE/: CMakeLists.txt
GTE/Mathematics/: ACosEstimate.h  APConversion.h  APInterval.h  ASinEstimate.h  ATanEstimate.h  AdaptiveSkeletonClimbing2.h  AdaptiveSkeletonClimbing3.h  AlignedBox.h  ApprCircle2.h  ApprCone3.h  ApprCone3EllipseAndPoints.h  ApprCylinder3.h  ApprEllipse2.h  ApprEllipseByArcs.h  ApprEllipsoid3.h  ApprGaussian2.h  ApprGaussian3.h  ApprGreatCircle3.h  ApprHeightLine2.h  ApprHeightPlane3.h  ApprOrthogonalLine2.h  ApprOrthogonalLine3.h  ApprOrthogonalPlane3.h  ApprParaboloid3.h  ApprParallelLines2.h  ApprPolynomial2.h  ApprPolynomial3.h  ApprPolynomial4.h  ApprPolynomialSpecial2.h  ApprPolynomialSpecial3.h  ApprPolynomialSpecial4.h  ApprQuadratic2.h  ApprQuadratic3.h  ApprSphere3.h  ApprTorus3.h  ArbitraryPrecision.h  Arc2.h  AxisAngle.h  BSNumber.h  BSPPolygon2.h  (+408 more)
